Ran some analysis tools and made recommended changes.